--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="ultrapassagem">Você deseja enviar o macro de trânsito?</string>
     <string name="sair">Você deseja sair?</string>
     <string name="motorista">Você deseja enviar o macro de motorista</string>
+    <string name="linear">linear</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
